--- a/src/pages/microbiologia.astro
+++ b/src/pages/microbiologia.astro
@@ -1,18 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "@components/organism/Header.astro";
+import Footer from "@components/organism/Footer.astro";
 import { ContentTopic } from "@/components/reactComponents/contentTopic";
+
 ---
 
-<Layout title="Welcome to BiblioVet.">
-  <main class="flex flex-col items-center py-8 px-10 w-full h-full">
-    <Header category={1}/>
+<Layout title="Microbiologia">
+  <Header category={1} />
+  <main class="w-full">
     <ContentTopic client:load />
   </main>
+  <Footer/>
 </Layout>
 
-<style>
-  body {
-    height: 100%;
-  }
-</style>
