--- a/src/pages/histologia.astro
+++ b/src/pages/histologia.astro
@@ -1,10 +1,16 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { index } from "../../es.json";
+import Header from "@components/organism/Header.astro";
+import Footer from "@components/organism/Footer.astro";
+import { ContentTopic } from "@/components/reactComponents/contentTopic";
+
 ---
 
-<Layout title="Welcome to BiblioVet.">
-  <main class="flex flex-col items-center py-8 px-10 w-full h-full">
-    <h1 class="text-white font-bold">Histologia</h1>
+<Layout title="Parasitologia">
+  <Header category={2} />
+  <main class="w-full">
+    <ContentTopic client:load />
   </main>
+  <Footer/>
 </Layout>
+
