screen phone fixes

--- a/src/components/organism/Footer.astro
+++ b/src/components/organism/Footer.astro
@@ -1,4 +1,4 @@
 <footer class="flex flex-col items-center pb-4 pt-32 mt-auto text-zinc-700 font-semibold text-xs">
     <p>Desarrollado por Sanss</p>
-    <p>Escrito y Revisado por Gabriela Villamil - Medica Veterinaria y Zootecnista</p>
+    <p class="text-center">Escrito y Revisado por Gabriela Villamil - Medica Veterinaria y Zootecnista</p>
 </footer>
