gabys changes done

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="flex flex-col pt-4 px-5 min-h-screen">
+  <body class="flex flex-col min-h-screen">
     <slot />
     <script src="../index.ts"></script>
     <script
