--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,22 @@
 import Layout from "../layouts/Layout.astro";
 import { index } from "@es";
 import OptionCard from "../components/molecule/OptionCard.astro";
+
+const accessToken = Astro.cookies.get("bv-access-token");
+const refreshToken = Astro.cookies.get("bv-refresh-token");
+
+let loginText = "Ver Perfil";
+if (!accessToken || !refreshToken) {
+  loginText = "Iniciar Sesion";
+}
 ---
 
 <Layout title="Welcome to BiblioVet.">
-  <main class="flex flex-col items-center py-8 px-10 w-full h-full">
+  <main class="relative flex flex-col items-center py-8 px-10 w-full h-full">
+    <a
+      class="absolute right-5 top-5 lg:right-20 animate-pulse px-2 py-1 bg-lime-600 rounded-lg font-semibold text-lime-100 hover:text-black hover:animate-none hover:bg-lime-400 hover:scale-110 transition-all"
+      href="/auth/signin">{loginText}</a
+    >
     <section class="flex flex-col justify-center items-center">
       <img
         width="100"
@@ -19,7 +31,9 @@ import OptionCard from "../components/molecule/OptionCard.astro";
       </p>
     </section>
 
-    <section class="flex flex-col py-5 px-4 mt-16 w-full max-w-4xl rounded-lg mx-auto backdrop-blur-md bg-white bg-opacity-20 ">
+    <section
+      class="flex flex-col py-5 px-4 mt-16 w-full max-w-4xl rounded-lg mx-auto backdrop-blur-md bg-white bg-opacity-20"
+    >
       <h2 class="text-xl text-gray-700 font-bold">{index.temas.title}</h2>
       <article
         class="flex flex-wrap justify-center mt-5 pl-3 gap-4 mx-auto w-full"
@@ -35,7 +49,7 @@ import OptionCard from "../components/molecule/OptionCard.astro";
 
 <style>
   body {
-	  height: 100%;
+    height: 100%;
     background-image: url("/images/campo.webp");
     background-repeat: no-repeat;
     background-position: center;
@@ -61,5 +75,4 @@ import OptionCard from "../components/molecule/OptionCard.astro";
       background-size: 100% auto;
     }
   }
-  
 </style>
