--- a/src/components/organism/profile/FollowButtons.astro
+++ b/src/components/organism/profile/FollowButtons.astro
@@ -58,7 +58,7 @@ const { buttonState, id, buttonContent} = Astro.props;
         : "https://qpets.vercel.app";
   
       if (followButton.dataset.followState == "follow") {
-        const { status } = await fetch(`${url}/api/follow-actions`, {
+        await fetch(`${url}/api/follow-actions`, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
@@ -77,7 +77,7 @@ const { buttonState, id, buttonContent} = Astro.props;
         followButton.classList.remove("follow-button");
         followButton.classList.add("unfollow-button");
       } else {
-        const { status } = await fetch(`${url}/api/follow-actions`, {
+        await fetch(`${url}/api/follow-actions`, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
