--- a/.vercel/output/functions/_render.func/src/pages/auth/signin.astro
+++ b/.vercel/output/functions/_render.func/src/pages/auth/signin.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "@layouts/Layout.astro";
 
+export const prerender = false;
+
 const { cookies } = Astro;
 
 const accessToken = cookies.get("bv-access-token");
