--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -24,7 +24,7 @@ const response = await fetch(url + "/api/profile", {
 const { data, image, contributions} = await response.json();
 let welcome = false;
 
-if (data[0]?.nickname == null) {
+if (data?.[0].nickname == null) {
   welcome = true;
 }
 ---
