--- a/src/pages/auth/signin.astro
+++ b/src/pages/auth/signin.astro
@@ -6,6 +6,7 @@ import { supabase } from "@lib/supabase";
 export const prerender = false;
 
 const { cookies } = Astro;
+console.log("token is: ", Astro.cookies.get("bv-access-token"))
 const { data: sessionData, error } = await supabase.auth.getSession();
 if (error) {
   cookies.delete("bv-access-token", {
@@ -15,6 +16,7 @@ if (error) {
       path: "/",
     });
 } else {
+  console.log("Token is luego:", sessionData)
   return  Astro.redirect("/dashboard");
 }
 ---
