--- a/src/components/organism/profile/UserDetails.astro
+++ b/src/components/organism/profile/UserDetails.astro
@@ -1,17 +1,17 @@
 ---
 import { supabase } from "@/lib/supabase";
-import { getSession } from "@lib/helpers";
 import FollowButtons from "./FollowButtons.astro";
+import { getUserFromCookies } from "@lib/auth";
 
 const { image, data, type = "owner" } = Astro.props;
 let buttonState = "follow";
 let buttonContent = "Seguir";
-const sessionData = await getSession(Astro.cookies);
+const user = await getUserFromCookies(Astro.cookies);
 const { data: followData} = await supabase
   .from("followers")
   .select()
   .match({
-    user_uuid: sessionData.session.data.user!.id,
+    user_uuid: user!.id,
     follower_uuid: data.uuid,
   });
 
